--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,39 @@
-README/*
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Python
+**/__pycache__/
+.python-version
+env/
+
+# PyPi
+build/
+dist/
+*.egg-info/
+.eggs/
+lib/
+
+# Testing
+tests/**/*
+!tests/test_*
+.pytest_cache/
+.tox/
+tox.ini
+.coverage
